--- a/_data/data.yml
+++ b/_data/data.yml
@@ -55,7 +55,7 @@ education:
 
 
 projects:
-    title: Projets d'Université et de Free Code Camp
+    title: Projets d'Université & de freeCodeCamp
     intro: >
 
     assignments:
