--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,11 +37,21 @@ sidebar:
 
       - item: Théâtre
 
-education:
+éducation:
     - degree: Certificat en informatique appliquée
       university: Université de Montréal
       time: 2019 - 2020
       details: |
+
+    - degree: Sites Web adaptatifs 
+      university: freeCodeCamp
+      time: 2020
+      details: <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat Responsive Web Design</a>|
+
+    - degree: Structures de données et algorithmes JavaScript
+      university: freeCodeCamp
+      time: 2020
+      details: <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat JavaScript Algorithms and Data Structures</a>|
 
     - degree: Études de deuxième cycle en criminologie
       university: Université de Montréal
