--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,7 +37,9 @@ sidebar:
 
       - item: Théâtre
 
-Éducation:
+education:
+    title: Éducation
+
     - degree: Certificat en informatique appliquée
       university: Université de Montréal
       time: 2019 - 2020
