change languages pour langues

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,7 @@ sidebar:
     linkedin: noemie-gagnon
     github: noegagnon
 
-    langues:
+    languages:
       - idiom: Francais
         level: Langue maternelle
 
