--- a/_data/data.yml
+++ b/_data/data.yml
@@ -28,7 +28,7 @@ sidebar:
       - idiom: Espagnol
         level: Notions de base
 
-    intérêts:
+    interest:
       - item: Randonnée
 
       - item: Vélo
