--- a/_data/data.yml
+++ b/_data/data.yml
@@ -46,10 +46,11 @@ education:
     - degree: Sites Web adaptatifs et Structures de données et algorithmes JavaScript
       university: freeCodeCamp
       time: 2020
-      details: |
-      Certificats:
+      details: 
+        Certificats:
         <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat Responsive Web Design</a>
         <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat JavaScript Algorithms and Data Structures</a>
+|
 
     - degree: Études de deuxième cycle en criminologie
       university: Université de Montréal
@@ -97,6 +98,7 @@ experiences:
       time: 2019 - Present
       company: Airfill
       details: |
+        Traduction de l'anglais au français
 
     - role: Transcriptrice
       time: 2019 - Present
