--- a/_data/data.yml
+++ b/_data/data.yml
@@ -37,6 +37,9 @@ sidebar:
 
       - item: Théâtre
 
+      - item: Lecture
+
+
 education:
     - degree: Certificat en informatique appliquée
       university: Université de Montréal
@@ -47,8 +50,8 @@ education:
       university: freeCodeCamp
       time: 2020
       details: |
-          - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat de Responsive Web Design</a> 
-          - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat de JavaScript Algorithms and Data Structures</a>
+      - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat de Responsive Web Design</a> 
+      - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat de JavaScript Algorithms and Data Structures</a>
 
     - degree: Études de deuxième cycle en criminologie
       university: Université de Montréal
