--- a/_data/data.yml
+++ b/_data/data.yml
@@ -45,6 +45,7 @@ education:
       university: Université de Montréal
       time: 2019 - 2020
       details: |
+      Obtention d'une Mention d'excellence
 
     - degree: Sites Web adaptatifs et Structures de données et algorithmes JavaScript
       university: freeCodeCamp
