--- a/_data/data.yml
+++ b/_data/data.yml
@@ -95,7 +95,7 @@ projects:
         link: "https://codepen.io/noegag/full/QWwaoEE"
 
 experiences:
-    - role: Traductrice
+    - role: Traductrice (anglais au français)
       time: 2019 - Present
       company: Airfill
       details: |
