--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,14 +44,15 @@ education:
       university: Université de Montréal
       time: 2019 - 2020
       details: |
-      - Obtaining Mention of Excellence
-      
+      - Obtention d'une Mention d'excellence
+
     - degree: Sites Web adaptatifs et Structures de données et algorithmes JavaScript
       university: freeCodeCamp
       time: 2020
       details: |
-      - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat de Responsive Web Design</a> 
-      - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat de JavaScript Algorithms and Data Structures</a>
+          - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/responsive-web-design" target="_blank">Certificat de Responsive Web Design</a> 
+          - <a href="https://www.freecodecamp.org/certification/fcc048ff84e-2260-4043-b930-b37e6fe7a77f/javascript-algorithms-and-data-structures" target="_blank">Certificat de JavaScript Algorithms and Data Structures</a>
+
 
     - degree: Études de deuxième cycle en criminologie
       university: Université de Montréal
