--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,7 +44,7 @@ education:
       university: Université de Montréal
       time: 2019 - 2020
       details: |
-          - Obtention d'une Mention d'excellence
+        Obtention d'une Mention d'excellence
 
     - degree: Sites Web adaptatifs et Structures de données et algorithmes JavaScript
       university: freeCodeCamp
