--- a/_data/data.yml
+++ b/_data/data.yml
@@ -93,7 +93,7 @@ projects:
       - title: Formulaire
         link: "https://codepen.io/noegag/full/PowQEYz"
 
-      - title: Apis Microservices Projects
+      - title: Projets APIs et microservices
         link: "https://codepen.io/noegag/full/xxVOPpq"
 
       - title: Page d'informations
