--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,6 +87,9 @@ projects:
       - title: Éditeur de photos
         link: "http://noemiegagnon.com/tp1-1015/"
 
+      - title: Caculatrice
+        link: "https://codepen.io/noegag/full/ZEWKqjB"
+
       - title: Calculs de conversion et menu de restaurant
         link: "https://noemiegagnon.com/tp3-1144/"
         
