ajout mention react

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,7 +87,7 @@ projects:
       - title: Éditeur de photos
         link: "http://noemiegagnon.com/tp1-1015/"
 
-      - title: Caculatrice
+      - title: Caculatrice (React)
         link: "https://codepen.io/noegag/full/ZEWKqjB"
 
       - title: Calculs de conversion et menu de restaurant
