update transcriber date

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -92,7 +92,7 @@ experiences:
       details: |
 
     - role: Transcriptrice
-      time: 2019 - Present
+      time: 2019 - 2021
       company: Appen
       details: |
 
